tests/valid/haspragma.nim
# Count: 1
# Negative count: 0

proc MyProc() {.raises: [].} = discard
