tests/invalid/paramsused.nim
# Count: 0
# Negative count: 1

proc MyProc(arg: int) = discard
